--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,7 @@ Django==3.1.6
 django-cors-headers==3.7.0
 django-rest-framework==0.1.0
 djangorestframework==3.12.2
+gunicorn==20.1.0
+python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.1
