--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "mdb-angular-free",
+  "name": "frontend",
   "version": "11.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod",
+    "start:prod": "node server.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
