--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==3.1.6
 django-cors-headers==3.7.0
 django-rest-framework==0.1.0
+django-rest-passwordreset==1.2.0
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.7.1
 gunicorn==20.1.0
