Initialize social media login

--- a/backend/.env_sample
+++ b/backend/.env_sample
@@ -1,2 +1,13 @@
-SECRET_KEY=django_secret_key
+SECRET_KEY=django_secret
 DEBUG=True
+
+EMAIL_HOST_USER=email_address
+EMAIL_HOST_PASSWORD=generated_email_password
+
+# Facebook configuration
+SOCIAL_AUTH_FACEBOOK_KEY=client_id
+SOCIAL_AUTH_FACEBOOK_SECRET=client_secret
+
+# Google configuration 
+SOCIAL_AUTH_GOOGLE_OAUTH2_KEY=client_id
+SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET=client_secret
