--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,33 @@
 asgiref==3.3.1
+certifi==2021.5.30
+cffi==1.14.5
+chardet==4.0.0
+cryptography==3.4.7
+defusedxml==0.7.1
+Deprecated==1.2.12
 dj-database-url==0.5.0
 Django==3.1.6
 django-cors-headers==3.7.0
+django-oauth-toolkit==1.5.0
 django-rest-framework==0.1.0
 django-rest-passwordreset==1.2.0
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.7.1
+drf-social-oauth2==1.0.9
 gunicorn==20.1.0
+idna==2.10
+jwcrypto==0.9.1
+oauthlib==3.1.1
+pycparser==2.20
 PyJWT==2.1.0
 python-decouple==3.4
+python3-openid==3.2.0
 pytz==2021.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
 sqlparse==0.4.1
+urllib3==1.26.5
+wrapt==1.12.1
