--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~11.2.4",
     "@fortawesome/fontawesome-free": "^5.6.3",
     "angular-bootstrap-md": "11.0.0",
+    "angularx-social-login": "^3.5.7",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
